# cTensor

./: .gitignore  CMakeLists.txt
src/: optimizer.c
